k8s/postgresql-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet 
metadata:
  name: postgresql
  labels:
    app: postgresql
spec:
  serviceName: "postgresql-service" 
  replicas: 1 
  selector:
    matchLabels:
      app: postgresql
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      containers:
        - name: postgresql
          image: postgres:15-alpine 
          imagePullPolicy: IfNotPresent 
          ports:
            - containerPort: 5432
              name: postgresql
              protocol: TCP 
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data 
          resources:
            requests:
              cpu: "500m" 
              memory: "2Gi" 
            limits:
              cpu: "1.5" 
              memory: "4Gi"
          livenessProbe: 
            exec:
              command: ["pg_isready", "-U", "$(POSTGRES_USER)", "-d", "$(POSTGRES_DB)", "-h", "localhost"]
            initialDelaySeconds: 30 
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe: 
            exec:
              command: ["pg_isready", "-U", "$(POSTGRES_USER)", "-d", "$(POSTGRES_DB)", "-h", "localhost"]
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
  volumeClaimTemplates:
    - metadata:
        name: postgres-data 
      spec:
        accessModes:
          - ReadWriteOnce 
        resources:
          requests:
            storage: 5Gi
