k8s/backend-deployment.yaml
# k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: backend-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-app
  template:
    metadata:
      labels:
        app: backend-app
    spec:
      containers:
      - name: backend
        image: asia-southeast1-docker.pkg.dev/primeval-rune-467212-t9/auth-app-repo/auth-backend:latest
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service # Pastikan nama ini cocok dengan yang di nginx.conf frontend
spec:
  selector:
    app: backend-app
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP
