k8s/backend-service.yaml
# k8s/backend-service.yaml (diperbarui)
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  annotations:
    cloud.google.com/backend-config: '{"default": "backend-health-check-config"}' # Tambahkan baris ini
spec:
  selector:
    app: backend-app
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP
