k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service # Nama service yang akan digunakan backend
spec:
  selector:
    app: db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
