k8s/frontend-deployment.yaml
# k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: frontend-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-app
  template:
    metadata:
      labels:
        app: frontend-app
    spec:
      containers:
      - name: frontend
        image: asia-southeast1-docker.pkg.dev/primeval-rune-467212-t9/auth-app-repo/auth-frontend:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-config-volume
          mountPath: /etc/nginx/conf.d/default.conf # Path di mana Nginx mencari konfigurasi
          subPath: default.conf # Nama file dalam ConfigMap
          readOnly: true
      volumes:
      - name: nginx-config-volume
        configMap:
          name: frontend-nginx-config # Nama ConfigMap yang akan kita buat
          items:
          - key: nginx.conf # Nama file dalam ConfigMap
            path: default.conf # Nama file yang akan dimount di dalam container
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer # Gunakan LoadBalancer untuk akses eksternal
